--- a/obs_flutter/obs/obs_demo/pubspec.yaml
+++ b/obs_flutter/obs/obs_demo/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   http: ^0.13.3
   path_provider: ^2.0.2
   shared_preferences: ^2.2.3
+  record: ^3.0.0
+  audioplayers: ^6.0.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
