--- a/obs_flutter/obs/obs_demo/pubspec.yaml
+++ b/obs_flutter/obs/obs_demo/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   record: ^3.0.0
   audioplayers: ^6.0.0
   permission_handler: ^10.2.0
+  flutter_audio_waveforms: ^1.2.1+8
 
 dev_dependencies:
   flutter_test:
